--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
 
     <tr>
-      <td><img src="oip.jpg" alt="Classic car"></td>
+      <td><img src="OIP.jpg" alt="Classic car"></td>
       <td>
         <h1>Michael Dallas</h1>
         <p><em>Founder of <strong><a href="https://smartdesignslv.com/">Smart DesignsLV</a></strong></em></p>
